# multi-platform-scraper

./: .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: start_chrome.sh
scripts/lib/pa/: platform_rules.py
scripts/lib/pa/cdp/: manager.py
scripts/lib/pa/engines/: base.py  fast.py  rpa.py
scripts/lib/pa/exporters/: csv_exporter.py  json_exporter.py
scripts/lib/pa/extractors/: base.py
scripts/lib/pa/stealth/: anti_crawler.js
scripts/lib/pa/utils/: reachability.py
