[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/lib/pa"]

[project]
name = "pa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-anyio>=0.0.0", "anyio[trio]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts/lib"]

